--- a/fundamentos/app/css/calculadora.css
+++ b/fundamentos/app/css/calculadora.css
@@ -1,83 +1,123 @@
-html{   
-    width: 100%;
-    height: 100%;
+html {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-body{
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
+body {
+  width: 100%;
+  height: 100%;
 }
 
-.marco--principal{
-    
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items:center;
-    justify-content: center;
-    box-sizing:border-box;
+main {
+  width: 100%;
+  height: 100%;
 }
 
-.marco--secundario{
-    width: 45%;
-    height: 75%;  
-    margin-top: 5%;
+.titulo {
+  display: inline-block;
 }
 
-.calculadora{
-    border: 2px solid black;
-    background-color: rgb(207, 214, 221);
-    width: 100%;
-    height: 100%;
-    
+.marco--principal {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.marco--principal .marco--secundario {
+  clear: left;
+  width: 50%;
+  height: 75%;
+  margin-top: 5%;
+  margin: 0px auto;
 }
 
-.pantalla{
-    border: 2px solid black;
-    background-color: white;
-    box-sizing:border-box;
-    width: 90%;
-    height: 25%;
-    margin-left: 5%;
-    margin-top: 2%;
-    
+.calculadora {
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: #070bf8;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-bottom: 5%;
 }
 
-.pantalla--arriba{
-    width: 100%;
-    height: 48%;
-    margin: 0;
-    padding: 0;
-    border: none;
-    border-bottom: ridge;
+.pantalla {
+  border: 2px solid black;
+  background-color: white;
+  width: 90%;
+  height: 30%;
+  margin: auto;
+  margin-top: 2.5%;
+  margin-bottom: 5%;
 }
 
-.pantalla--abajo{
-    width: 100%;
-    height: 48%;
-    margin: 0;
-    padding: 0;
-    border: none;
+.pantalla-arriba {
+  width: 100%;
+  height: 50%;
+}
+.pantalla-arriba .pantalla--arriba {
+  width: 100%;
+  height: 100%;
+  border-bottom: 1px solid black;
+  float: right;
+  text-align: right;
+  color: red;
 }
 
-.calculadora__teclado{
-    width: 100%;
-    height: 75%;
-    
+.pantalla-abajo {
+  width: 100%;
+  height: 50%;
 }
 
-
-tr{
-    width: auto;
-    height: auto;
+.pantalla--abajo {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-bottom: 1px solid;
+  text-align: right;
+  color: #070bf8;
+  font-size: 2.2em;
 }
 
-td{
-    width: 15%;
-    height: 25px;
-    text-align: center;
-    vertical-align: center;
-    border: 1px solid black;
+.teclado {
+  width: 100%;
+  height: 65%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
+.teclado .operador, .teclado .borrar {
+  color: red;
+}
+.teclado .boton--resultado {
+  font-size: 2em;
+}
+.teclado .tecla--resultado {
+  width: 38%;
+  height: 18%;
+}
+
+.tecla {
+  width: 18%;
+  height: 18%;
+  padding: 1.5px;
+  box-shadow: 1px 1px 1px 1px;
+}
+.tecla input:hover {
+  background-color: #ccd4d8;
+  font-size: 1.5em;
+  color: black;
+  width: 98.5%;
+  height: 98.5%;
+}
+
+input {
+  width: 100%;
+  height: 100%;
+  font-size: 1.6em;
+}
+
+/*# sourceMappingURL=calculadora.css.map */
