--- a/fundamentos/app/css/calculadora.scss
+++ b/fundamentos/app/css/calculadora.scss
@@ -2,7 +2,7 @@
 @use "variables" as *;
 
 
-html{   
+html{
     width: 100%;
     height: 100%;
     padding: 0;
@@ -12,7 +12,7 @@ html{
 body{
     width: 100%;
     height: 100%;
-    
+
 }
 
 main{
@@ -28,11 +28,11 @@ main{
     width: 100%;
     height: 100%;
     text-align: center;
-    
+
     .marco--secundario{
         clear: left;
         width: 50%;
-        height: 75%;  
+        height: 75%;
         margin-top: 5%;
         margin: 0px auto;
     }
@@ -56,11 +56,11 @@ main{
     margin: auto;
     margin-top: 2.5%;
     margin-bottom: 5%;
-    
+
 }
 
 .pantalla-arriba{
-  
+
     width: 100%;
     height: 50%;
 
@@ -75,10 +75,10 @@ main{
 }
 
 .pantalla-abajo{
-    
+
     width: 100%;
-    height: 50%;  
-}    
+    height: 50%;
+}
     .pantalla--abajo {
         display: block;
         width: 100%;
@@ -103,7 +103,7 @@ main{
     }
     .boton--resultado{
         font-size: 2em;
-        
+
     }
     .tecla--resultado{
         width: 38%;
@@ -123,7 +123,7 @@ main{
         width: 98.5%;
         height: 98.5%;
     }
-    
+
 }
 
 input{
@@ -131,3 +131,7 @@ input{
     height: 100%;
     font-size: 1.6em;
 }
+
+/*# sourceMappingURL=calculadora.css.map */
+
+/*# sourceMappingURL=calculadora.scss.map */
