--- a/fundamentos/app/css/calculadora.css
+++ b/fundamentos/app/css/calculadora.css
@@ -24,6 +24,7 @@ main {
   height: 100%;
   text-align: center;
 }
+
 .marco--principal .marco--secundario {
   clear: left;
   width: 50%;
@@ -35,7 +36,7 @@ main {
 .calculadora {
   border: 2px solid black;
   border-radius: 10px;
-  background-color: #070bf8;
+  background-color: rgba(2, 2, 2, 0.966);
   width: 100%;
   height: 100%;
   text-align: center;
@@ -44,7 +45,7 @@ main {
 
 .pantalla {
   border: 2px solid black;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.664);
   width: 90%;
   height: 30%;
   margin: auto;
@@ -56,6 +57,7 @@ main {
   width: 100%;
   height: 50%;
 }
+
 .pantalla-arriba .pantalla--arriba {
   width: 100%;
   height: 100%;
@@ -63,6 +65,7 @@ main {
   float: right;
   text-align: right;
   color: red;
+  font-size: 2.4em;
 }
 
 .pantalla-abajo {
@@ -76,8 +79,9 @@ main {
   height: 100%;
   border-bottom: 1px solid;
   text-align: right;
-  color: #070bf8;
-  font-size: 2.2em;
+  color: #ececf1;
+  font-size: 2.8em;
+  overflow: hidden;
 }
 
 .teclado {
@@ -89,12 +93,15 @@ main {
   justify-content: center;
   align-items: center;
 }
+
 .teclado .operador, .teclado .borrar {
   color: red;
 }
+
 .teclado .boton--resultado {
   font-size: 2em;
 }
+
 .teclado .tecla--resultado {
   width: 38%;
   height: 18%;
@@ -106,8 +113,9 @@ main {
   padding: 1.5px;
   box-shadow: 1px 1px 1px 1px;
 }
+
 .tecla input:hover {
-  background-color: #ccd4d8;
+  background-color: #a3a7a8;
   font-size: 1.5em;
   color: black;
   width: 98.5%;
@@ -120,6 +128,8 @@ input {
   font-size: 1.6em;
 }
 
+/*# sourceMappingURL=calculadora.css.map */
+/*# sourceMappingURL=calculadora.scss.map */
 /*# sourceMappingURL=calculadora.css.map */
 /*# sourceMappingURL=calculadora.scss.map */
 
