--- a/angular/src/app/contactos/tmpl-anfitrion.component.html
+++ b/angular/src/app/contactos/tmpl-anfitrion.component.html
@@ -1,6 +1,4 @@
-<ng-container [ngSwitch]="VM.Modo" >
-  <app-contactos-add *ngSwitchCase="'add'"></app-contactos-add>
-  <app-contactos-edit *ngSwitchCase="'edit'"></app-contactos-edit>
-  <app-contactos-view *ngSwitchCase="'view'"></app-contactos-view>
-  <app-contactos-list *ngSwitchDefault></app-contactos-list>
- </ng-container>
+<li class="nav-item">
+  <a class="nav-link" [routerLink]="['/contactos']" routerLinkActive="active">
+    contactos</a>
+</li>
