--- a/angular/src/app/main/header/header.component.html
+++ b/angular/src/app/main/header/header.component.html
@@ -22,22 +22,17 @@
           <a class="nav-link" routerLink="/antonie/hasted" routerLinkActive="active"><i class="fas fa-address-book"></i> antonie</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" routerLink="/libros" routerLinkActive="active"><i class="fas fa-user-tie"></i> libros</a>
+          <a class="nav-link" routerLink="/libros" routerLinkActive="active"><i class="fas fa-book"></i> libros</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" routerLink="/falsa" routerLinkActive="active"><i class="fas fa-home"></i> falsa</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/blog" >
+            <i class="fab fa-blogger"></i> blog</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" href="/demos" routerLinkActive="active"><i class="fas fa-home"></i> demos</a>
-        </li>
-        <li class="nav-item" >
-          <a class="nav-link" routerLink="/config" routerLinkActive="active"><i class="fas fa-home"></i> config</a>
-        </li>
-        <li class="nav-item" >
-          <a class="nav-link" routerLink="/config/datos" routerLinkActive="active"><i class="fas fa-home"></i> datos</a>
+          <a class="nav-link" routerLink="/config" routerLinkActive="active"><i class="fas fa-cog"></i> config</a>
         </li>
       </ul>
-  <!--    <app-login></app-login>    -->
+      <app-login></app-login>
     </div>
   </div>
 </nav>
