Angular-Inicio_Demo_Calculadora

--- a/angular/src/app/calculadora/calculadora.component.html
+++ b/angular/src/app/calculadora/calculadora.component.html
@@ -1,41 +1,33 @@
+<H1>Calculadora</H1>
 <div class="Calculadora">
   <output class="Resumen">
-    <ng-container *ngIf="SeparadorDecimal === ','; then ResumenComa; else ResumenPunto;"></ng-container>
+    <ng-template #Resumen>{{ Resumen }} </ng-template>
   </output>
   <output class="Pantalla">
-    <ng-container *ngIf="SeparadorDecimal === ','; then PantallaComa; else PantallaPunto;"></ng-container>
+    <ng-container><ng-template #Pantalla>{{ Pantalla }} </ng-template></ng-container>
   </output>
-  <input class="btnOperar" type="button" value="C" (click)="inicia()">
-  <input class="btnOperar col-2x2" type="button" value="BORRAR" (click)="borrar()">
-  <input class="btnOperar" type="button" value="+" (click)="calcula('+')">
-  <input class="btnDigito" type="button" value="7" (click)="ponDigito('7');">
-  <input class="btnDigito" type="button" value="8" (click)="ponDigito('8');">
-  <input class="btnDigito" type="button" value="9" (click)="ponDigito('9');">
-  <input class="btnOperar" type="button" value="-" (click)="calcula('-')">
-  <input class="btnDigito" type="button" value="4" (click)="ponDigito('4');">
-  <input class="btnDigito" type="button" value="5" (click)="ponDigito('5');">
-  <input class="btnDigito" type="button" value="6" (click)="ponDigito('6');">
-  <input class="btnOperar" type="button" value="*" (click)="calcula('*')">
-  <input class="btnDigito" type="button" value="1" (click)="ponDigito('1');">
-  <input class="btnDigito" type="button" value="2" (click)="ponDigito('2');">
-  <input class="btnDigito" type="button" value="3" (click)="ponDigito('3');">
-  <input class="btnOperar" type="button" value="/" (click)="calcula('/')">
-  <input class="btnDigito" type="button" value="±" (click)="cambiaSigno()">
-  <input class="btnDigito" type="button" value="0" (click)="ponDigito('0');">
-  <input class="btnDigito" type="button" value="{{SeparadorDecimal}}" (click)="ponComa()">
-  <input class="btnOperar" type="button" value="=" (click)="calcula('=');">
-  <input class="btnDigito" type="button" value="π" (click)="ponOperando(Math.PI);">
-  <input class="btnOperar" type="button" value="x" (click)="calcula('x');">
+
+
+  <div class="teclado">
+    <input class="botonOperar" id="encender" span-2 type="button" value="Encender" (click)="iniciar()" />
+    <input class="botonOperar" type="button" value="C" (click)="borrar()" />
+    <input class="botonOperar" type="button" value="/" (click)="calcular('/')" />
+    <input class="botonDigito" type="button" value="7" (click)="ponerDigito('7')" />
+    <input class="botonDigito" type="button" value="8" (click)="ponerDigito('8')" />
+    <input class="botonDigito" type="button" value="9" (click)="ponerDigito('9')" />
+    <input class="botonOperar" type="button" value="*" (click)="calcular('*')" />
+    <input class="botonDigito" type="button" value="4" (click)="ponerDigito('4')" />
+    <input class="botonDigito" type="button" value="5" (click)="ponerDigito('5')" />
+    <input class="botonDigito" type="button" value="6" (click)="ponerDigito('6')" />
+    <input class="botonOperar" type="button" value="+" (click)="calcular('+')" />
+
+    <input class="botonDigito" type="button" value="1" (click)="ponerDigito('1')" />
+    <input class="botonDigito" type="button" value="2" (click)="ponerDigito('2')" />
+    <input class="botonDigito" type="button" value="3" (click)="ponerDigito('3')" />
+    <input class="botonOperar" type="button" value="-" (click)="calcular('-')" />
+
+    <input class="botonDigito" id="cero" type="button" value="0" (click)="ponerDigito('0')" />
+    <input class="botonDigito" type="button" value="." (click)="ponerComa()" />
+    <input class="botonOperar" type="button" value="=" (click)="calcular('=')" />
+  </div>
 </div>
-<ng-template #ResumenComa>
-  {{Resumen | slice:-30 | toComaDecimal}}
-</ng-template>
-<ng-template #ResumenPunto>
-  {{Resumen | slice:-30}}
-</ng-template>
-<ng-template #PantallaComa>
-  {{Pantalla | toComaDecimal}}
-</ng-template>
-<ng-template #PantallaPunto>
-  {{Pantalla}}
-</ng-template>
