--- a/angular/src/app/security/login/login.component.html
+++ b/angular/src/app/security/login/login.component.html
@@ -14,5 +14,5 @@
 </ng-container>
 <small *ngIf="loginSrv.isAutenticated">
   Hola {{loginSrv.Name}}
-  <input class="btn btn-outline-success btn-sm" type="button" value="Desconectar" (click)="logInOut()">
+  <input class="btn btn-outline-success bg-white text-black btn-sm" type="button" value="Desconectar" (click)="logInOut()">
 </small>
