--- a/angular/src/app/main/header/header.component.html
+++ b/angular/src/app/main/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/"><img src="assets/logo.png" width="120" alt="Logotipo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,16 +10,13 @@
           <a class="nav-link" routerLink="/inicio" routerLinkActive="active"><i class="fas fa-home"></i> inicio</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" routerLink="/demos" routerLinkActive="active"><i class="fas fa-chalkboard-teacher"></i> demos</a>
+          <a class="nav-link" routerLink="/demos" routerLinkActive="active"><i class="fas fa-id-card"></i> demos</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link" routerLink="/chisme/de/hacer/numeros" routerLinkActive="active"><i class="fas fa-home"></i> calculadora</a>
+          <a class="nav-link" routerLink="/calculadora" routerLinkActive="active"><i class="fas fa-calculator"></i> calculadora</a>
         </li>
         <li class="nav-item" >
           <a class="nav-link" routerLink="/contactos" routerLinkActive="active"><i class="fas fa-address-book"></i> contactos</a>
-        </li>
-        <li class="nav-item" >
-          <a class="nav-link" routerLink="/antonie/hasted" routerLinkActive="active"><i class="fas fa-address-book"></i> antonie</a>
         </li>
         <li class="nav-item" >
           <a class="nav-link" routerLink="/libros" routerLinkActive="active"><i class="fas fa-book"></i> libros</a>
