--- a/angular/src/app/main/home/home.component.scss
+++ b/angular/src/app/main/home/home.component.scss
@@ -30,24 +30,26 @@ p {
   top: 0;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
-  background-color: #1976d2;
+  background-color: #0b35f1;
   color: white;
   font-weight: 600;
+  font-size: 2em;
 
   img {
     margin: 0 16px;
   }
 
   #twitter-logo {
-    height: 40px;
+    height: 50px;
     margin: 0 8px;
   }
 
   #youtube-logo {
-    height: 40px;
+    height: 50px;
     margin: 0 16px;
   }
 
@@ -61,7 +63,7 @@ p {
   display: flex;
   margin: 82px auto 32px;
   padding: 0 16px;
-  max-width: 960px;
+  max-width: 100%;
   flex-direction: column;
   align-items: center;
 }
@@ -101,6 +103,7 @@ svg.material-icons:not(:last-child) {
   align-items: center;
   transition: all 0.2s ease-in-out;
   line-height: 24px;
+  font-size: 1.5em;
 }
 
 .card-container .card:not(:last-child) {
@@ -131,6 +134,7 @@ svg.material-icons:not(:last-child) {
   font-weight: 600;
   border: none;
   width: auto;
+  height: auto;
   min-width: 30%;
   position: relative;
 }
@@ -146,12 +150,9 @@ svg#rocket {
   top: -24px;
 }
 
-svg#rocket-smoke {
-  height: calc(100vh - 95px);
-  position: absolute;
-  top: 10px;
-  right: 180px;
-  z-index: -10;
+#rocket-text{
+  font-size: 1.5em;
+  font-weight: 700;
 }
 
 a,
@@ -199,6 +200,7 @@ a:hover {
 }
 
 .circle-link {
+
   height: 40px;
   width: 40px;
   border-radius: 40px;
@@ -214,12 +216,13 @@ a:hover {
 }
 
 .circle-link:hover {
+  margin-bottom: 30px;
   transform: translateY(-0.25rem);
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
 
 footer {
-  margin-top: 8px;
+  margin-top: 12px;
   display: flex;
   align-items: center;
   line-height: 20px;
@@ -244,7 +247,7 @@ footer a {
 }
 
 .github-star-badge:hover {
-  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
+  background-image: linear-gradient(-180deg, #d9dbdd, #b1b2b3 90%);
   border-color: rgba(27, 31, 35, 0.35);
   background-position: -0.5em;
 }
@@ -262,6 +265,8 @@ svg#clouds {
   z-index: -10;
   width: 1920px;
 }
+
+
 
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
@@ -283,6 +288,7 @@ svg#clouds {
     right: 120px;
     transform: rotate(-5deg);
   }
+
 }
 
 @media screen and (max-width: 575px) {
