--- a/angular/src/app/calculadora/calculadora.component.scss
+++ b/angular/src/app/calculadora/calculadora.component.scss
@@ -31,20 +31,27 @@ h1{
 }
 
 .Pantalla{
-  color: lightgray;
-  height: 25px;
+  height: 100px;
   width: 300px;
+  height: 20%;
+  color: gray;
+  z-index: 5;
 }
 
-.Resumen{
-  height: 25px;
-  width: 300px;
+.Resultado, .Resumen{
+  color: white;
 
+  height: 50px;
+  width: 300px;
+  border: 1px;
+  font-size: 3em;
+  margin: 0;
+  text-align: right;
 }
 
 .teclado{
   width: auto;
-  height: auto;
+  height: 60%;
 }
 
 input{
