--- a/angular/src/app/calculadora/calculadora.component.html
+++ b/angular/src/app/calculadora/calculadora.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="teclado">
-    <input class="botonOperar" id="encender" span-2 type="button" value="Borrar" (click)="iniciar()" />
+    <input class="botonOperar" id="borrar" span-2 type="button" value="Borrar" (click)="iniciar()" />
     <input class="botonOperar" type="button" value="C" (click)="borrar()" />
     <input class="botonOperar" type="button" value="/" (click)="calcular('/')" />
     <input class="botonDigito" type="button" value="7" (click)="ponerDigito('7')" />
